adjust api
