# zeus/api/kpoint/query.go
@@ -4,9 +4,11 @@ package kpoint
 import (
 	"context"
 
+	"github.com/Geapefurit/kline-back/proto/kline"
 	kpointproto "github.com/Geapefurit/kline-back/proto/kline/zeus/v1/kpoint"
 	kpoint "github.com/Geapefurit/kline-back/zeus/pkg/mw/v1/kpoint"
 	"github.com/NpoolPlatform/go-service-framework/pkg/logger"
+	"github.com/NpoolPlatform/libent-cruder/pkg/cruder"
 
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
@@ -70,5 +72,47 @@ func (s *Server) GetKPoints(ctx context.Context, in *kpointproto.GetKPointsReque
 	return &kpointproto.GetKPointsResponse{
 		Infos: infos,
 		Total: total,
+	}, nil
+}
+
+func (s *Server) GetKPointsForLine(ctx context.Context, in *kpointproto.GetKPointsForLineRequest) (*kpointproto.GetKPointsForLineResponse, error) {
+	conds := kpointproto.Conds{
+		KPointType:  &kline.Uint32Val{Op: cruder.EQ, Value: uint32(in.KPointType)},
+		TokenPairID: &kline.Uint32Val{Op: cruder.EQ, Value: in.TokenPairID},
+	}
+
+	handler, err := kpoint.NewHandler(
+		ctx,
+		kpoint.WithConds(&conds),
+		kpoint.WithOffset(in.GetOffset()),
+		kpoint.WithLimit(in.GetLimit()),
+		kpoint.WithOriginalTime(&in.OriginalTime, true),
+	)
+	if err != nil {
+		logger.Sugar().Errorw(
+			"GetKPointForLine",
+			"In", in,
+			"Error", err,
+		)
+		return &kpointproto.GetKPointsForLineResponse{}, status.Error(codes.Internal, "internal server err")
+	}
+
+	infos, total, err := handler.GetKPointsForLine(ctx)
+	if err != nil {
+		logger.Sugar().Errorw(
+			"GetKPointForLine",
+			"In", in,
+			"Error", err,
+		)
+		return &kpointproto.GetKPointsForLineResponse{}, status.Error(codes.Internal, "internal server err")
+	}
+	return &kpointproto.GetKPointsForLineResponse{
+		OriginalTime: *handler.OriginalTime,
+		TokenPairID:  in.TokenPairID,
+		KPointType:   in.KPointType,
+		Offset:       in.Offset,
+		Limit:        in.Limit,
+		KPoints:      infos,
+		Total:        total,
 	}, nil
 }
